--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "bootstrap-v5-sass",
+  "name": "unicorn-agancy",
   "version": "1.0.0",
-  "description": "Learning bootstrap v5 with sass",
+  "description": "A modern responsive HTML5 landing page template",
   "main": "index.js",
   "scripts": {
     "compile:sass": "sass --watch scss:assets/css"
   },
   "keywords": [
-    "Bootstrap",
-    "bootstrap-v5",
+    "unicorn-agency",
+    "digital-agency",
     "sass",
-    "learn-bootstrap",
-    "learn-sass"
+    "bootstrap5",
+    "responsive-template"
   ],
   "author": "Sammy Leths",
   "license": "ISC",
